--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,8 @@
 
     </main>
     <footer>
-        <p>&copy; 2025 House Price Prediction. All rights reserved.</p>
+        <p>&copy; 2025 House Price Prediction. All rights reserved</p>
+            Design by Gattuoch Chambang .
     </footer>
     <!-- Add your JavaScript scripts or include external scripts here -->
     <script>
